--- a/src/app/scss/base/_typography.scss
+++ b/src/app/scss/base/_typography.scss
@@ -2,6 +2,8 @@
 
 $montserrat-font: "Montserrat", "sans-serif";
 
+$inter: "Inter", "sans-serif";
+
 $raleway: "Raleway", "sans-serif";
 
 $roboto: "Roboto", "sans-serif";
