--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -9,19 +9,38 @@ main {
   height: 100vh;
   background-color: $primary-bg-color;
 
-  .test-cards {
+  .topSection {
     width: 100%;
     height: 100%;
-    overflow: auto;
+    @include flex(row, space-around, center, wrap);
 
-    .box {
-      width: fit-content;
-      height: 250px;
-      padding: 20px;
-      background-color: $primary-card-bg;
-      border: $base-card-border-bg;
-      color: $base-white-font;
-      font-family: $montserrat-font;
+    .headText {
+      width: 450px;
+
+      h2 {
+        color: white;
+        font-family: $raleway;
+        font-weight: 500;
+        font-size: 50px;
+      }
+
+      p {
+        color: white;
+        font-family: $inter;
+        font-weight: 300;
+        font-size: 20px;
+        padding: 0;
+        margin: 0;
+      }
+    }
+
+    .mainImage {
+      img {
+        width: 100%;
+        max-width: 350px;
+        height: auto;
+        object-fit: contain;
+      }
     }
   }
 }
