add: side nav, hero_bg_video, glowing effects

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,4 +1,7 @@
 <main>
+  <video autoplay loop muted class="wave-bg">
+    <source src="assets/videos/hero_bg.mp4" type="video/mp4" />
+  </video>
   <section class="topSection">
     <div class="headText">
       <h2>Browse musics with us.</h2>
@@ -7,13 +10,16 @@
         free from repetitive playlists. If you're looking for fresh and exciting
         music, you've come to the right place!
       </p>
+      <button class="redirButton">Browse musics</button>
     </div>
 
     <div class="mainImage">
-      <img
-        src="assets/images/pngfind.com-ear-png-277969.png"
-        alt="Home Image"
-      />
+      <div class="imgBg">
+        <img
+          src="assets/images/pngfind.com-ear-png-277969.png"
+          alt="Home Image"
+        />
+      </div>
     </div>
   </section>
 </main>
