--- a/src/app/scss/utils/_variables.scss
+++ b/src/app/scss/utils/_variables.scss
@@ -3,6 +3,7 @@
 $primary-bg-color: #010e1e;
 $primary-card-bg: #043b76;
 $text-container-bg: #2c698d;
+$darkblue-bg: #061221;
 
 // ფონტის ფერები
 $base-white-font: white;
@@ -12,3 +13,8 @@ $base-card-border-bg: 1px solid #39ff14;
 
 // ძირითადი მეორეხარისხოვანი ფერები
 $neon-green: #39ff14;
+
+// ღილაკების bg ფერი
+$electric-bg: #1e90ff;
+
+$electric-border: 2px solid #1666b2;
