--- a/src/app/features/home/home.component.scss
+++ b/src/app/features/home/home.component.scss
@@ -7,7 +7,26 @@
 main {
   width: 100%;
   height: 100vh;
-  background-color: $primary-bg-color;
+  // background-color: $primary-bg-color;
+
+  .hero {
+    position: relative;
+    height: 100vh;
+    @include flex(row, center, center);
+    color: white;
+    text-align: center;
+    overflow: hidden;
+  }
+  .wave-bg {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+    // opacity: 0.9;
+  }
 
   .topSection {
     width: 100%;
@@ -22,6 +41,8 @@ main {
         font-family: $raleway;
         font-weight: 500;
         font-size: 50px;
+        text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+        animation: heroTextWave 3s ease-in-out infinite;
       }
 
       p {
@@ -31,16 +52,72 @@ main {
         font-size: 20px;
         padding: 0;
         margin: 0;
+        line-height: 1.6;
+        text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.5);
+      }
+
+      .redirButton {
+        width: fit-content;
+        padding: 15px;
+        background-color: transparent;
+        outline: none;
+        border: 2px solid $electric-bg;
+        color: white;
+        margin-top: 20px;
+        font-family: $raleway;
+        cursor: pointer;
+        font-size: 20px;
+        transition: all 0.2s;
+      }
+
+      .redirButton:hover {
+        background-color: $electric-bg;
+        border: $electric-border;
+        box-shadow: 0 0 15px rgba(0, 127, 255, 0.7);
+        transition: all 0.2s;
+        animation: pulseGlow 1.5s infinite;
       }
     }
 
     .mainImage {
-      img {
-        width: 100%;
-        max-width: 350px;
-        height: auto;
-        object-fit: contain;
+      .imgBg {
+        background-color: $darkblue-bg;
+        padding: 25px;
+        border-top-left-radius: 180px;
+        border-top-right-radius: 180px;
+        filter: drop-shadow(0px 0px 20px rgba(30, 144, 255, 0.5));
+
+        img {
+          width: 100%;
+          max-width: 350px;
+          user-select: none;
+          height: auto;
+          object-fit: contain;
+        }
       }
     }
+  }
+}
+
+@keyframes heroTextWave {
+  0%,
+  100% {
+    transform: translateY(0);
+  }
+
+  50% {
+    transform: translateY(-3px);
+  }
+}
+
+@keyframes pulseGlow {
+  0% {
+    box-shadow: 0 0 10px #1e90ff, 0 0 20px #0077ff;
+  }
+  50% {
+    box-shadow: 0 0 15px #1e90ff, 0 0 25px #00a2ff;
+  }
+  100% {
+    box-shadow: 0 0 10px #1e90ff, 0 0 20px #0077ff;
   }
 }
