search page, search function

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,5 +1,5 @@
 <main>
-  <video autoplay loop muted class="wave-bg">
+  <video autoplay loop muted playsinline class="wave-bg">
     <source src="assets/videos/hero_bg.mp4" type="video/mp4" />
   </video>
   <section class="topSection">
