--- a/src/app/features/shared/components/card/card.component.html
+++ b/src/app/features/shared/components/card/card.component.html
@@ -1,8 +1,10 @@
-<!-- <div class="test-cards">
-  <div class="box" *ngFor="let item of response">
-    <p>
-      {{ item.title }}
-    </p>
+<div class="music-card">
+  <div class="box" *ngFor="let item of [].constructor(information)">
+    <div class="title">
+      <p>
+        {{ item.title }}
+      </p>
+    </div>
     <audio [src]="item.preview" controls></audio>
   </div>
-</div> -->
+</div>
