--- a/src/app/features/shared/components/card/card.component.html
+++ b/src/app/features/shared/components/card/card.component.html
@@ -1,10 +1,30 @@
-<div class="music-card">
-  <div class="box" *ngFor="let item of [].constructor(information)">
-    <div class="title">
+<div class="music-card" *ngFor="let item of [].constructor(information)">
+  <div class="card-head">
+    <div class="imgC">
+      <img [src]="item.album.cover_medium" alt="" />
+    </div>
+  </div>
+  <div class="card-body">
+    <div class="music-title">
       <p>
         {{ item.title }}
       </p>
     </div>
-    <audio [src]="item.preview" controls></audio>
+    <div class="music-description">
+      <p>
+        Artist:
+        <span>{{ item.artist.name }}</span>
+      </p>
+    </div>
+  </div>
+  <div class="player-controls">
+    <div class="btns">
+      <button class="universal-btn" (click)="playButton(item.preview)">
+        <i class="fa-solid" [ngClass]="isPlaying ? 'fa-pause' : 'fa-play'"></i>
+      </button>
+    </div>
+    <div class="timeStamp" *ngIf="isPlaying">
+      <span> 00:00 </span>
+    </div>
   </div>
 </div>
