--- a/src/app/scss/utils/_variables.scss
+++ b/src/app/scss/utils/_variables.scss
@@ -4,6 +4,7 @@ $primary-bg-color: #010e1e;
 $primary-card-bg: #043b76;
 $text-container-bg: #2c698d;
 $darkblue-bg: #061221;
+$main-card-bg: #1f456e;
 
 // ფონტის ფერები
 $base-white-font: white;
