--- a/src/app/features/search/search.component.scss
+++ b/src/app/features/search/search.component.scss
@@ -96,7 +96,7 @@ main {
       width: 80%;
 
       .foundItems {
-        width: 80%;
+        // width: 80%;
         height: 600px;
         padding: 20px;
         @include base_align(row, flex-start, wrap);
@@ -105,5 +105,18 @@ main {
         // background-color: black;
       }
     }
+  }
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #123866;
+  border-radius: 10px;
+
+  &:hover {
+    background-color: #2c4d75;
   }
 }
