--- a/src/app/features/shared/components/card/card.component.scss
+++ b/src/app/features/shared/components/card/card.component.scss
@@ -5,7 +5,7 @@
 .music-card {
   width: 250px;
   height: 450px;
-  background-color: #1f456e;
+  background-color: $main-card-bg;
   border-radius: 10px;
   border: 1px solid white;
   font-family: $raleway;
