add: artist mini profile component (still building process)

--- a/src/app/features/search/search.component.scss
+++ b/src/app/features/search/search.component.scss
@@ -12,7 +12,7 @@ main {
     height: 100%;
     padding-top: 90px;
     margin: auto;
-    @include flex(row, space-evenly, center, wrap);
+    @include flex(row, space-evenly, center);
     // background-color: blueviolet;
 
     .sideContainer {
