--- a/src/app/scss/utils/_variables.scss
+++ b/src/app/scss/utils/_variables.scss
@@ -5,7 +5,7 @@ $primary-card-bg: #043b76;
 $text-container-bg: #2c698d;
 $darkblue-bg: #061221;
 $main-card-bg: #1f456e;
-
+$profile-bg: #153c6b;
 // ფონტის ფერები
 $base-white-font: white;
 
