--- a/src/app/features/search/search.component.html
+++ b/src/app/features/search/search.component.html
@@ -45,6 +45,7 @@
       </div>
     </div>
     <div class="wrapContent">
+      <app-artist-profile [artistInfo]="profile$ | async" />
       <div class="foundItems">
         @if (!(artist$ | async)) {
         <app-card
@@ -55,7 +56,7 @@
 
         <app-artist-card
           *ngFor="let item of artist$ | async"
-          (passUrl)="fetchSpecArtist($event)"
+          (emitId)="fetchSpecArtist($event)"
           [artistInput]="item"
         />
       </div>
