--- a/src/app/features/shared/components/artist-profile/artist-profile.component.html
+++ b/src/app/features/shared/components/artist-profile/artist-profile.component.html
@@ -1,1 +1,17 @@
-<p>artist-profile works!</p>
+<div class="profile-container">
+  <div class="profile-image">
+    <img [src]="information?.picture_medium" alt="" />
+  </div>
+  <div class="profile-info">
+    <div class="artist-name">
+      <p>
+        {{ information?.name }}
+      </p>
+    </div>
+    <div class="basic-inf">
+      <a [href]="information?.link" target="_blank"
+        >Visit artists deezer profile</a
+      >
+    </div>
+  </div>
+</div>
