--- a/src/app/features/shared/components/artist-profile/artist-profile.component.scss
+++ b/src/app/features/shared/components/artist-profile/artist-profile.component.scss
@@ -50,6 +50,7 @@
 @media (max-width: 768px) {
   .profile-container {
     max-width: 100%;
+    height: 75px;
     position: fixed;
     margin-bottom: 0;
     bottom: 0;
